--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -32,7 +32,7 @@ body {
   width: 100%;
   height: 60px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  top: 0;
+  top: 40px;
   background-color: #181a1b;
   z-index: 1000;
 }
@@ -398,4 +398,27 @@ footer {
   .projects-container {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
+}
+
+#update {
+  background: linear-gradient(90deg, #0093E9, #80D0C7);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+}
+
+#update p {
+  margin: 0;
+  color: white;
+  font-weight: 500;
+}
+
+#update a {
+  color: white;
+  font-style: italic;
 }
